--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ background: #606060;
     transform:t translateY(0px);
     margin: 30px 0;
   }
-  .nav-link{
+  .nv-link{
     text-align: left!important;
 
   }
